feat: user favorites services, repositories and tests
