# backend/openAPI.yml
@@ -1011,6 +1011,75 @@ paths:
           $ref:  '#/components/responses/IncorrectToken'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
+    get:
+      summary: Gets the user favorites.
+      tags:
+        - user-favorites
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Returns a JSON array containing all user favorites.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    user_id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    recipe_id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    recipe:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          format: uuid
+                          example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                        category_id:
+                          type: string
+                          format: uuid
+                          example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                        name:
+                          type: string
+                          example: "Recipe 01"
+                        description:
+                          type: string
+                          example: "Recipe 01 description"
+                        ingredients:
+                          type: string
+                          example: "Recipe 01 ingredients"
+                        steps:
+                          type: string
+                          example: "Recipe 01 steps"
+                        video_url:
+                          type: string
+                          example: "Recipe 01 video URL"
+                        image_url:
+                          type: string
+                          example: null
+                        created_at:
+                          type: string
+                          format: dateformat
+                          example: "2020-07-02T21:57:00.421Z"
+                        updated_at:
+                          type: string
+                          format: dateformat
+                          example: "2020-07-02T21:57:00.421Z"
+        '400':
+          $ref:  '#/components/responses/IncorrectToken'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /user-favorites/{id}:
     delete:
       summary: Deletes an user favorite.
@@ -1032,45 +1101,5 @@ paths:
           description: Returns a successfully deleted user favorite confirmation.
         '400':
           $ref: '#/components/responses/IncorrectToken'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-  /user-favorites/{recipe_id}:
-    get:
-      summary: Gets the user favorite by recipe id.
-      parameters:
-        - in: path
-          name: recipe_id
-          schema:
-            type: string
-            format: uuid
-            example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-          required: true
-          description: Recipe id to reference the user favorite.
-      tags:
-        - user-favorites
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Returns a JSON containing the user favorite.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  user_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  recipe_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-        '400':
-          $ref:  '#/components/responses/IncorrectToken'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
