# backend/src/shared/infra/http/routes/index.ts
@@ -6,6 +6,8 @@ import passwordRouter from '@modules/users/infra/http/routes/password.routes';
 import profileRouter from '@modules/users/infra/http/routes/profile.routes';
 
 import categoriesRouter from '@modules/categories/infra/http/routes/categories.routes';
+import recipesRouter from '@modules/recipes/infra/http/routes/recipes.routes';
+import userFavoritesRouter from '@modules/user-favorites/infra/http/routes/user-favorites.routes';
 
 const routes = Router();
 
@@ -15,5 +17,7 @@ routes.use('/password', passwordRouter);
 routes.use('/profile', profileRouter);
 
 routes.use('/categories', categoriesRouter);
+routes.use('/recipes', recipesRouter);
+routes.use('/user-favorites', userFavoritesRouter);
 
 export default routes;
